<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_right_open"
        style="@style/StartMenuAppStyle"
        android:text="@string/my_open" />

    <TextView
        android:id="@+id/tv_right_phone_run"
        style="@style/StartMenuAppStyle"
        android:text="@string/my_mobile_phone_mode_run" />

    <TextView
        android:id="@+id/tv_right_desktop_run"
        style="@style/StartMenuAppStyle"
        android:text="@string/my_desktop_run" />

    <TextView
        android:id="@+id/tv_right_fixed_taskbar"
        style="@style/StartMenuAppStyle"/>

    <TextView
        android:id="@+id/tv_right_uninstall"
        style="@style/StartMenuAppStyle"
        android:text="@string/my_uninstall" />

</LinearLayout>
