<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2e9edf0"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="@dimen/startupmenu_layout_size_one_hundred_and_eighty"
        android:layout_height="match_parent"
        android:background="#5a41a2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/startupmenu_layout_size_forty"
            android:layout_marginLeft="@dimen/startupmenu_layout_size_sixteen"
            android:layout_marginTop="@dimen/startupmenu_layout_size_sixteen"
            android:singleLine="true"
            android:text="@string/common_application"
            android:textSize="@dimen/startupmenu_text_size_twelve"/>

        <ListView
            android:id="@+id/lv_usually_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="#00000000"
            />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/openthos_file_manager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/startupmenu_layout_size_sixteen">

            <ImageView
                android:layout_width="@dimen/startupmenu_layout_size_sixteen"
                android:layout_height="@dimen/startupmenu_layout_size_sixteen"
                android:layout_gravity="center"
                android:src="@drawable/startup_menuicon_computer"/>

            <TextView
                style="@style/Mstyle"
                android:text="@string/file_manager"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/system_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/startupmenu_layout_size_sixteen">

            <ImageView
                android:layout_width="@dimen/startupmenu_layout_size_sixteen"
                android:layout_height="@dimen/startupmenu_layout_size_sixteen"
                android:layout_gravity="center"
                android:src="@drawable/startup_menuicon_setting"/>

            <TextView
                style="@style/Mstyle"
                android:text="@string/system_setting"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/power_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="powerOff"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/startupmenu_layout_size_sixteen">

            <ImageView
                android:layout_width="@dimen/startupmenu_layout_size_sixteen"
                android:layout_height="@dimen/startupmenu_layout_size_sixteen"
                android:layout_gravity="center"
                android:src="@drawable/startup_menuicon_power"/>

            <TextView
                style="@style/Mstyle"
                android:text="@string/power_source"/>
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/startupmenu_layout_size_one"
        android:layout_height="match_parent"
        android:src="#808080"/>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="@dimen/startupmenu_layout_size_three_hundred_eighty_five"
        android:layout_height="match_parent"
        android:background="#1affffff"
        android:orientation="vertical"
        android:paddingLeft="@dimen/startupmenu_layout_size_sixteen"
        android:paddingRight="@dimen/startupmenu_layout_size_sixteen">

        <!--
           android:background="@drawable/search_background"
        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/startupmenu_layout_size_twenty_eight"
            android:layout_marginTop="@dimen/startupmenu_layout_size_sixteen"
            android:background="#ffffff"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/et_text"
                    style="?android:attr/textViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/startupmenu_layout_size_twenty_eight"
                    android:background="#ffffff"
                    android:gravity="left|center_vertical"
                    android:hint="@string/software_search"
                    android:imeOptions="actionSend"
                    android:minLines="1"
                    android:paddingLeft="@dimen/startupmenu_layout_size_eight"
                    android:textColor="#939aa3"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/startupmenu_text_size_twelve"/>

                <ImageView
                    android:id="@+id/iv_view_search"
                    android:layout_width="@dimen/startupmenu_layout_size_twelve"
                    android:layout_height="@dimen/startupmenu_layout_size_twelve"
                    android:layout_centerVertical="true"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="@dimen/startupmenu_layout_size_eight"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:src="@drawable/ic_starter_search"/>

            </FrameLayout>

            <View
                android:id="@+id/line_view"
                android:layout_width="@dimen/startupmenu_layout_size_four"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/iv_view_search"
                android:background="#f2e9edf0"/>

            <LinearLayout
                android:id="@+id/sort_click_view"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/startupmenu_layout_size_twenty_eight"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/line_view"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_arrow_gray"
                    android:layout_width="@dimen/startupmenu_layout_size_twelve"
                    android:layout_height="@dimen/startupmenu_layout_size_twelve"
                    android:layout_marginLeft="@dimen/startupmenu_layout_size_eight"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:src="@drawable/ic_start_menu_down_arrow"/>

                <TextView
                    android:id="@+id/tv_sort_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minWidth="@dimen/startupmenu_layout_size_fifty"
                    android:onClick="SortShow"
                    android:paddingLeft="@dimen/startupmenu_layout_size_five"
                    android:paddingRight="@dimen/startupmenu_layout_size_five"
                    android:text="@string/click_sort"
                    android:textColor="#939aa3"
                    android:textSize="@dimen/startupmenu_text_size_twelve"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_arrow_white"
                android:layout_width="@dimen/startupmenu_layout_size_twenty_eight"
                android:layout_height="@dimen/startupmenu_layout_size_twenty_eight"
                android:background="@drawable/ic_starter_top_arrow_white">
            </ImageView>
        </LinearLayout>

        <!-- android:verticalSpacing="10dip"
            android:horizontalSpacing="10dip"  -->
        <GridView
            android:id="@+id/gv_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/startupmenu_layout_size_sixteen"
            android:horizontalSpacing="@dimen/startupmenu_layout_size_five"
            android:listSelector="@android:color/transparent"
            android:numColumns="4"
            android:scrollbars="none"/>
    </LinearLayout>

</LinearLayout>
